--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-handlebars": "^4.0.4",
+    "express-session": "^1.17.1",
     "moment": "^2.26.0",
     "mysql": "^2.18.1",
     "mysql2": "^2.1.0",
